# BloodandBilgewater

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN_DOCUMENT.md  LICENSE  README.md  TO-DO.md
Archive/BevyReference/: Cargo.toml
Archive/BevyReference/src/app/: schedule.rs
Archive/BevyReference/src/assets/: loading.rs
Archive/BevyReference/src/chunking/: loader.rs
Archive/BevyReference/src/core/: constants.rs  mod.rs
Archive/BevyReference/src/gameplay/classes/: systems.rs
Archive/BevyReference/src/gameplay/combat/: components.rs  systems.rs
Archive/BevyReference/src/gameplay/loot/: components.rs  mod.rs
Archive/BevyReference/src/gameplay/player/: mod.rs  plugin.rs
Archive/BevyReference/src/gameplay/ship/: mod.rs
Archive/BevyReference/src/input/: keyboard.rs
Archive/BevyReference/src/lab/: camera.rs  scene.rs
Archive/BevyReference/src/lab/tiles/: shallow_shore_lab.rs
Archive/BevyReference/src/rendering/: mod.rs  sprites.rs  tilemap.rs
Archive/BevyReference/src/simulation/: systems.rs  weather.rs
Archive/BevyReference/src/ui/: world_select.rs
assets/: README.md
docs/: ARCHITECTURE_RULES.md  ASEPRITE_UNITY_WORKFLOW.md  DESIGN_SNAPSHOT.md  MIGRATION_AUDIT_UNITY_ASEPRITE.md  MIGRATION_LOG_UNITY_ASEPRITE.md  README.md  ROADMAP.md  TILESET_RULES.md  UNITY_MIGRATION.md  WIKI.md
docs/adr/: 0001-bevy-plugin-architecture.md
docs/art/: README.md  (+8 more)
examples/: lab.rs
scripts/: export-assets.cmd  export-assets.ps1  run-lab.cmd  run-lab.ps1
src/: asset_paths.rs  lib.rs  main.rs
tools/: build-readme-art.ps1  migrate-to-unity-aseprite-workflow.ps1
unity/: README.md
(+1386 files in other folders)
